Revision history for Dist::Zilla::PluginBundle::MSCHOUT

{{$NEXT}}

0.32  2017-07-29
    - add MinimumPerl plugin
    - enable Dist::Zilla::PluginBundle::PluginRemover plugin
    - make signature test an AUTHOR test and use Test::Signature
    - use Moose attibutes for options
    - enable ::PluginBundle::Config::Slicer role so plugin options can be
      easily set
    - enable InsertCopyright plugin
    - enable Prereqs::AuthorDeps plugin

0.31  2016-08-30
    - Configure Git::Push to also push build/releases if it exists on origin
    - signature test: skip generated files

0.30  2016-08-30
    - Mention use_travis and use_twitter options in POD docs
    - add MetaJSON plugin

0.29  2016-07-04
    - 0.28 accidentally completely removed Git::Push. Fixed.

0.28  2016-07-04
    - back out build/releases push config - this auto pushes anayway if remote
      branch exists.

0.27  2016-07-04
    - add use_travis option to enable the TravisYML plugin
    - configure Git::Push to push build/releases as well as master branch

0.26  2016-07-02
    - fix typo causing breakage if use_twitter was set (oops)

0.25  2016-07-02
    - enable Twitter plugin if 'use_twitter' is set
    - use RemovePrereqs to remove Module::Signature from prereqs since its
      optional
    - add missing dependency CheckPrereqsIndexed

0.24  2016-06-30
    - PodWeaver: allow SOURCE and AUTHOR(S) sections to be overridden.

0.23  2016-06-27
    - switch from deprecated BumpVersionFromGit to Git::NextVersion.  This is a
      drop-in replacement.

0.22  2011-05-30
    - use CheckPrereqsIndexed plugin
    - add "task" option which replaces Pod::Weaver with Task::Weaver, and uses
      AutoVersion

0.21  2011-05-13
    - use Pod::Elemental::Transformer::List

0.20  2011-02-01
    - add Pod::Weaver::PluginBundle::MSCHOUT

0.19  2011-01-25
    - code cleanups.
    - doc fixes.
    - add release_branch configuration arg

0.18  2011-01-24