@@ -113,10 +113,8 @@ sub configure {
     }
 
     $self->add_plugins(
-        qw(
-            Git::Check
-            Git::Commit
-        ),
+        [ 'Git::Check' => { allow_dirty => [qw(.travis.yml)] } ],
+        'Git::Commit',
         [ 'Git::CommitBuild' => { release_branch => $self->release_branch } ],
         [ 'Git::Tag'         => { branch => $self->release_branch } ],
         [
@@ -224,6 +222,7 @@ It's equivalent to:
  [NextRelease]
     format = "%-2v  %{yyyy-MM-dd}d"
  [Git::Check]
+ allow_dirty = .travis.yml
  [Git::Commit]
  [Git::NextVersion]
     first_version = 0.01
