@@ -1,6 +1,7 @@
 Revision history for Dist::Zilla::PluginBundle::MSCHOUT
 
 {{$NEXT}}
+    - Git::Check: allow .travis.yml to be dirty
 
 0.32  2017-07-29
     - add MinimumPerl plugin
